--- a/views/get_csv.erb
+++ b/views/get_csv.erb
@@ -15,12 +15,29 @@
 
         <div class="col-lg-6 col-sm-6 col-12">
             <h4>Generate Categories CSV</h4>
-            <form method="post" action="/csv/get">
+
+            <form method="post" action="/csv/generate">
+                <label for="url" class="col-2 col-form-label">URL</label>
+                <div class="col-10">
+                    <input class="form-control" type="text" value="" id="url" name="url">
+                </div>
+
+                <label for="username" class="col-2 col-form-label">Username</label>
+                <div class="col-10">
+                    <input class="form-control" type="text" value="" id="username">
+                </div>
+
+                <label for="api_key" class="col-2 col-form-label">API Key</label>
+                <div class="col-10">
+                    <input class="form-control" type="text" value="" id="api_key">
+                </div>
+                <button type="submit" class="btn btn-primary">Generate</button>
             </form>
         </div>
 
         <div class="col-lg-6 col-sm-6 col-12">
             <h4>Update Categories</h4>
+
             <form method="post" action="/csv/get">
                 <label class="input-group-btn">
                     <span class="btn btn-primary">
@@ -30,6 +47,7 @@
                 <input type="text" class="form-control" readonly>
             </form>
         </div>
+
     </div>
 </body>
 </html>
