add generate/download CSV functionality

--- a/views/get_csv.erb
+++ b/views/get_csv.erb
@@ -24,12 +24,12 @@
 
                 <label for="username" class="col-2 col-form-label">Username</label>
                 <div class="col-10">
-                    <input class="form-control" type="text" value="" id="username">
+                    <input class="form-control" type="text" value="" id="username" name="username">
                 </div>
 
                 <label for="api_key" class="col-2 col-form-label">API Key</label>
                 <div class="col-10">
-                    <input class="form-control" type="text" value="" id="api_key">
+                    <input class="form-control" type="text" value="" id="api_key" name="api_key">
                 </div>
                 <button type="submit" class="btn btn-primary">Generate</button>
             </form>
